--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "nodemon src/index.js",
+    "serve": "nodemon src/index.js",
     "lint": "./node_modules/eslint/bin/eslint.js"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-vue": "^6.2.2",
+    "sequelize": "^6.3.4",
+    "sqlite3": "^5.0.0"
   }
 }
