--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
+    "eslint": "^7.7.0",
+    "eslint-config-strongloop": "^2.1.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
   "scripts": {
+    "pretest": "eslint",
     "serve": "nodemon src/index.js"
   },
   "devDependencies": {
